--- a/src/pages/Home/AdminHome.module.css
+++ b/src/pages/Home/AdminHome.module.css
@@ -1,11 +1,11 @@
-.home {
+    .home {
     display: flex;
-    background-color: #1e1f3f;
+    background-color: #121212;
     min-height: 100vh;
-    height: 100%;
     width: 100%;
     position: relative;
     overflow-x: hidden;
+    color: #e0e0e0;
 }
 
 .adminContainer {
@@ -15,7 +15,7 @@
     font-size: 16px;
     font-weight: 500;
     color: #333;
-    background-color: #f5f5f5;
+    background: linear-gradient(to right, #4facfe, #00f2fe);
     padding: 8px 14px;
     border-radius: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
